--- a/src/OpenInfraPlatform/Forms/MainWindow.ui
+++ b/src/OpenInfraPlatform/Forms/MainWindow.ui
@@ -411,7 +411,7 @@
               </widget>
              </item>
              <item row="3" column="0">
-              <widget class="QCheckBox" name="checkBoxRenderingSelectAlignment">
+              <widget class="QCheckBox" name="checkBoxShowSelectedAlignment">
                <property name="enabled">
                 <bool>false</bool>
                </property>
@@ -1130,41 +1130,21 @@
            <rect>
             <x>10</x>
             <y>30</y>
-            <width>261</width>
-            <height>108</height>
+            <width>270</width>
+            <height>246</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_6">
            <item>
             <layout class="QGridLayout" name="gridLayout_8">
-             <item row="2" column="1">
-              <widget class="QSpinBox" name="spinBoxNumPointsForPCA">
-               <property name="maximum">
-                <number>100000000</number>
-               </property>
-               <property name="singleStep">
-                <number>1000</number>
-               </property>
-               <property name="value">
-                <number>1000</number>
-               </property>
-              </widget>
-             </item>
-             <item row="2" column="2">
-              <widget class="QDoubleSpinBox" name="doubleSpinBoxDistanceForPCA">
-               <property name="value">
-                <double>10.000000000000000</double>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="0">
+             <item row="5" column="0">
               <widget class="QLabel" name="labelSegmentsFilter">
                <property name="text">
-                <string>Segments Filter</string>
+                <string>Alignments filter</string>
                </property>
               </widget>
              </item>
-             <item row="1" column="1">
+             <item row="5" column="1">
               <widget class="QSpinBox" name="spinBoxMinSegmentPoints">
                <property name="maximum">
                 <number>10000000</number>
@@ -1177,14 +1157,20 @@
                </property>
               </widget>
              </item>
-             <item row="2" column="0">
-              <widget class="QLabel" name="labelPCAParameters">
-               <property name="text">
-                <string>PCA Parameters</string>
+             <item row="8" column="1">
+              <widget class="QSpinBox" name="spinBoxNumPointsForPCA">
+               <property name="maximum">
+                <number>100000000</number>
+               </property>
+               <property name="singleStep">
+                <number>1000</number>
+               </property>
+               <property name="value">
+                <number>1000</number>
                </property>
               </widget>
              </item>
-             <item row="1" column="2">
+             <item row="5" column="2">
               <widget class="QDoubleSpinBox" name="doubleSpinBoxMinSegmentLength">
                <property name="decimals">
                 <number>3</number>
@@ -1203,6 +1189,172 @@
                </property>
               </widget>
              </item>
+             <item row="3" column="0">
+              <widget class="QLabel" name="labelSegmentRailways">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="text">
+                <string>Compute centerlines</string>
+               </property>
+              </widget>
+             </item>
+             <item row="8" column="0">
+              <widget class="QLabel" name="labelPCAParameters">
+               <property name="text">
+                <string>PCA Parameters</string>
+               </property>
+              </widget>
+             </item>
+             <item row="10" column="0">
+              <widget class="QLabel" name="labelPlotAlignment">
+               <property name="text">
+                <string>Plot</string>
+               </property>
+              </widget>
+             </item>
+             <item row="10" column="1">
+              <widget class="QComboBox" name="comboBoxPlotSelectAlignment"/>
+             </item>
+             <item row="10" column="2">
+              <widget class="QPushButton" name="pushButtonPlotAlignment">
+               <property name="enabled">
+                <bool>true</bool>
+               </property>
+               <property name="text">
+                <string>Plot</string>
+               </property>
+              </widget>
+             </item>
+             <item row="9" column="0">
+              <widget class="QLabel" name="label_7">
+               <property name="text">
+                <string>Curvature</string>
+               </property>
+              </widget>
+             </item>
+             <item row="9" column="1">
+              <widget class="QSpinBox" name="spinBoxCurvatureStepSize">
+               <property name="minimum">
+                <number>1</number>
+               </property>
+               <property name="maximum">
+                <number>10000</number>
+               </property>
+               <property name="value">
+                <number>200</number>
+               </property>
+              </widget>
+             </item>
+             <item row="9" column="2">
+              <widget class="QSpinBox" name="spinBoxNumPointsForMeanCurvature">
+               <property name="minimum">
+                <number>1</number>
+               </property>
+               <property name="value">
+                <number>5</number>
+               </property>
+              </widget>
+             </item>
+             <item row="8" column="2">
+              <widget class="QDoubleSpinBox" name="doubleSpinBoxDistanceForPCA">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
+               <property name="value">
+                <double>10.000000000000000</double>
+               </property>
+              </widget>
+             </item>
+             <item row="6" column="1">
+              <widget class="Line" name="line_12">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+              </widget>
+             </item>
+             <item row="7" column="0">
+              <widget class="QLabel" name="label_8">
+               <property name="text">
+                <string>Compute curvature</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="2">
+              <widget class="QDoubleSpinBox" name="doubleSpinBoxCenterlineMaxDistance">
+               <property name="decimals">
+                <number>3</number>
+               </property>
+               <property name="minimum">
+                <double>0.200000000000000</double>
+               </property>
+               <property name="singleStep">
+                <double>0.100000000000000</double>
+               </property>
+              </widget>
+             </item>
+             <item row="6" column="0">
+              <widget class="Line" name="line_11">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+              </widget>
+             </item>
+             <item row="6" column="2">
+              <widget class="Line" name="line_13">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+              </widget>
+             </item>
+             <item row="7" column="2">
+              <widget class="QPushButton" name="pushButtonComputeCurvature">
+               <property name="text">
+                <string>Compute</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="0">
+              <widget class="QLabel" name="label_9">
+               <property name="text">
+                <string>Parameters</string>
+               </property>
+              </widget>
+             </item>
+             <item row="7" column="1">
+              <widget class="QComboBox" name="comboBoxComputeCurvature"/>
+             </item>
+             <item row="1" column="1">
+              <widget class="Line" name="line_15">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="2">
+              <widget class="Line" name="line_16">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0">
+              <widget class="Line" name="line_14">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="0">
+              <widget class="QLabel" name="label_10">
+               <property name="text">
+                <string>Segment railways</string>
+               </property>
+              </widget>
+             </item>
              <item row="0" column="2">
               <widget class="QPushButton" name="pushButtonApplySegmentRailways">
                <property name="sizePolicy">
@@ -1216,6 +1368,13 @@
                </property>
               </widget>
              </item>
+             <item row="3" column="1">
+              <widget class="QPushButton" name="pushButtonResetCenterlines">
+               <property name="text">
+                <string>Reset</string>
+               </property>
+              </widget>
+             </item>
              <item row="0" column="1">
               <widget class="QPushButton" name="pushButtonResetSegmentRailways">
                <property name="text">
@@ -1223,36 +1382,10 @@
                </property>
               </widget>
              </item>
-             <item row="0" column="0">
-              <widget class="QLabel" name="labelSegmentRailways">
-               <property name="sizePolicy">
-                <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
-                 <horstretch>0</horstretch>
-                 <verstretch>0</verstretch>
-                </sizepolicy>
-               </property>
-               <property name="text">
-                <string>Segment Railways</string>
-               </property>
-              </widget>
-             </item>
-             <item row="3" column="0">
-              <widget class="QLabel" name="labelPlotAlignment">
-               <property name="text">
-                <string>Plot</string>
-               </property>
-              </widget>
-             </item>
-             <item row="3" column="1">
-              <widget class="QComboBox" name="comboBoxPlotSelectAlignment"/>
-             </item>
              <item row="3" column="2">
-              <widget class="QPushButton" name="pushButtonPlotAlignment">
-               <property name="enabled">
-                <bool>true</bool>
-               </property>
+              <widget class="QPushButton" name="pushButtonComputeCenterlines">
                <property name="text">
-                <string>Plot</string>
+                <string>Compute</string>
                </property>
               </widget>
              </item>
