--- a/src/OpenInfraPlatform/Forms/MainWindow.ui
+++ b/src/OpenInfraPlatform/Forms/MainWindow.ui
@@ -231,7 +231,7 @@
          <enum>QTabWidget::North</enum>
         </property>
         <property name="currentIndex">
-         <number>1</number>
+         <number>3</number>
         </property>
         <property name="elideMode">
          <enum>Qt::ElideNone</enum>
@@ -1174,7 +1174,7 @@
            <rect>
             <x>10</x>
             <y>30</y>
-            <width>270</width>
+            <width>278</width>
             <height>246</height>
            </rect>
           </property>
@@ -1297,6 +1297,9 @@
               <widget class="QSpinBox" name="spinBoxNumPointsForMeanCurvature">
                <property name="minimum">
                 <number>1</number>
+               </property>
+               <property name="maximum">
+                <number>1000000000</number>
                </property>
                <property name="value">
                 <number>5</number>
@@ -1439,6 +1442,16 @@
               <widget class="QPushButton" name="pushButtonComputeCenterlines">
                <property name="text">
                 <string>Compute</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="1">
+              <widget class="QDoubleSpinBox" name="doubleSpinBoxCenterlineDensity">
+               <property name="maximum">
+                <double>10000.000000000000000</double>
+               </property>
+               <property name="value">
+                <double>10.000000000000000</double>
                </property>
               </widget>
              </item>
