--- a/src/OpenInfraPlatform/Forms/AddGeoreferenceDialog.ui
+++ b/src/OpenInfraPlatform/Forms/AddGeoreferenceDialog.ui
@@ -123,18 +123,16 @@
          </widget>
         </item>
         <item>
-         <widget class="QDialogButtonBox" name="buttonBoxOkCancel">
-          <property name="locale">
-           <locale language="English" country="UnitedStates"/>
+         <widget class="QPushButton" name="pushButtonOk">
+          <property name="text">
+           <string>Ok</string>
           </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="standardButtons">
-           <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-          </property>
-          <property name="centerButtons">
-           <bool>false</bool>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButtonCancel">
+          <property name="text">
+           <string>Cancel</string>
           </property>
          </widget>
         </item>
@@ -156,38 +154,5 @@
   </widget>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>buttonBoxOkCancel</sender>
-   <signal>rejected()</signal>
-   <receiver>AddGeoreferenceDialog</receiver>
-   <slot>reject()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>316</x>
-     <y>260</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>286</x>
-     <y>274</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>buttonBoxOkCancel</sender>
-   <signal>accepted()</signal>
-   <receiver>AddGeoreferenceDialog</receiver>
-   <slot>accept()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>248</x>
-     <y>254</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>157</x>
-     <y>274</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
