--- a/src/OpenInfraPlatform/Forms/MainWindow.ui
+++ b/src/OpenInfraPlatform/Forms/MainWindow.ui
@@ -380,6 +380,8 @@
     <addaction name="actionVertical_alignment"/>
     <addaction name="separator"/>
     <addaction name="actionCurvature"/>
+    <addaction name="separator"/>
+    <addaction name="actionShow_IFC_tree"/>
    </widget>
    <widget class="QMenu" name="menuTools">
     <property name="title">
@@ -1184,6 +1186,11 @@
   <action name="actionAdd_Georeference">
    <property name="text">
     <string>Add Georeference</string>
+   </property>
+  </action>
+  <action name="actionShow_IFC_tree">
+   <property name="text">
+    <string>Show IFC tree</string>
    </property>
   </action>
  </widget>
